# flexsoc-debug

./: .gitignore  CMakeLists.txt  README.md
cmake/: Custom.cmake  Findfusesoc.cmake  fusesoc.cmake
gw/: CMakeLists.txt  flexsoc_debug.core
gw/arty/: clocks.xdc  pins.xdc
gw/bench/: tb.cpp
gw/rtl/: arty_top.sv  flexsoc_debug.sv
gw/vivado/: vivado.tcl
host/cli/: CMakeLists.txt  flexdbg.cpp  flexdbg.h  main.cpp
host/flexsoc/: Cbuf.h  FTDITransport.cpp  flexsoc.cpp
host/log/: log.cpp  log.h
pkg-config/: flexsoc_debug.pc.in
test/: CMakeLists.txt
test/api/: CMakeLists.txt  connect.cpp  jtag-ap.cpp  jtag-dp.cpp  jtag-mem-access.cpp  jtag-mem-bridge.cpp  swd-ap.cpp  swd-dp.cpp  swd-mem-access.cpp  swd-mem-bridge.cpp
test/gtkwave/: debug_bridge.gtkw
test/irq/: CMakeLists.txt  irq-inject.c  irq.c  irq.h  remote-irq.c  remote-irq.cpp
test/irq/arm/: CMakeLists.txt  common.S  linker.ld
test/irq/arm/elf/: irq_simple
test/irq/arm/src/: irq_simple.c
test/scripts/: api_test.sh  irq_test.sh
